# DP-203

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logger_config.py  pyproject.toml  requirements.txt
app/: config_settings.py  main.py
app/endpoints/: azure_storage_endpoints.py  magic_api_endpoints.py  petfinder_api_endpoints.py  source_data_endpoints.py  source_nba_data.py  sports.py  storage.py  storage_operations.py
app/models/: azure_storage.py  azure_storage_models.py  responses.py  thesportsdb.py
app/sample_data/: thesportsdb_nba_teams.json  thesportsdb_nhl_teams.json
app/services/: azure_storage_client.py  data_fetcher.py  data_fetcher_nba.py  data_storage.py  get_storage_client.py  scryfall.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: tailwind.css
frontend/src/components/: MagicCard.vue  MagicMathGame.vue  MagicPriceGuess.vue  PetNameGame.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue
frontend/src/views/games/: MagicCardView.vue  MagicMathGameView.vue  MagicPriceGuessView.vue  PetNameGameView.vue
udemystuff/: 01.py
